# zParse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: benchmarks.yml  ci.yml  fuzzing.yml  release.yml  security.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: zparse-wasm.md
.sisyphus/notepads/zparse-refactor/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: zparse-refactor.md  zparse-wasm.md
benches/: parser_benchmarks.rs
crates/zparse/: Cargo.toml
crates/zparse-api/: Cargo.toml
crates/zparse-api/src/: handlers.rs  lib.rs  main.rs  router.rs  types.rs
crates/zparse-api/tests/: api_tests.rs
crates/zparse-cli/: Cargo.toml
crates/zparse-cli/src/: main.rs
crates/zparse-cli/tests/: cli_tests.rs
crates/zparse-wasm/: Cargo.toml
crates/zparse-wasm/src/: lib.rs
crates/zparse/benches/: convert.rs  json.rs  toml.rs  xml.rs  yaml.rs
crates/zparse/src/: convert.rs  csv.rs  error.rs  input.rs  json.rs  lexer.rs  lib.rs  toml.rs  value.rs  xml.rs  yaml.rs
crates/zparse/src/csv/: parser.rs
crates/zparse/src/json/: event.rs  parser.rs
crates/zparse/src/lexer/: cursor.rs  json.rs  token.rs  toml.rs  yaml.rs
crates/zparse/src/toml/: event.rs  parser.rs
crates/zparse/src/xml/: model.rs  parser.rs
crates/zparse/src/yaml/: event.rs  parser.rs
crates/zparse/tests/: convert_tests.rs  csv_tests.rs  error_tests.rs  fixtures_test.rs  format_detection_tests.rs  input_tests.rs  json_event_tests.rs  json_parser_tests.rs  jsonc_tests.rs  lexer_cursor_tests.rs  lexer_json_tests.rs  lexer_token_tests.rs  lexer_toml_tests.rs  lexer_yaml_tests.rs  property_tests.rs  toml_fixtures_test.rs  toml_parser_tests.rs  toml_property_tests.rs  value_tests.rs  xml_fixtures_test.rs  xml_parser_tests.rs  yaml_fixtures_test.rs  yaml_parser_tests.rs  yaml_property_tests.rs
crates/zparse/tests/fixtures/invalid/: invalid_escape.json  unterminated_string.json
crates/zparse/tests/fixtures/toml/invalid/: array_unterminated.toml  bad_table_header.toml  inline_table_newline.toml  missing_equals.toml
crates/zparse/tests/fixtures/toml/valid/: array_of_tables.toml  basic.toml  inline.toml  tables.toml
crates/zparse/tests/fixtures/valid/: array.json  complex.json  nested.json  simple.json
crates/zparse/tests/fixtures/xml/invalid/: mismatched.xml  unterminated.xml
crates/zparse/tests/fixtures/xml/valid/: attributes.xml  basic.xml  entities.xml  whitespace.xml
crates/zparse/tests/fixtures/yaml/invalid/: bad_indent.yaml  duplicate_key.yaml  flow_bad.yaml  flow_unterminated.yaml  unterminated_quote.yaml
crates/zparse/tests/fixtures/yaml/valid/: basic.yaml  flow.yaml  nested.yaml
docs/: API.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: json_converter.rs  json_parser.rs  toml_converter.rs  toml_parser.rs
scripts/: benchmark.sh  release.sh  release_script.sh
src/: common.rs  converter.rs  enums.rs  error.rs  formatter.rs  intern.rs  lib.rs  main.rs  parser.rs  util_functions.rs  utils.rs
src/common/: converter.rs  parser_state.rs  value_compare.rs
src/converter/: converter_common.rs  json_to_toml.rs  toml_to_json.rs
src/formatter/: formatter_common.rs  json.rs  toml.rs
src/parser/: config.rs  json.rs  lexer.rs  token.rs  toml.rs  value.rs
src/parser/lexer/: number_parser.rs  string_parser.rs
tests/: conversion_tests.rs  io_tests.rs  json_tests.rs  property_tests.rs  security_tests.rs  toml_tests.rs
tests/input/: large.json  small.json
zparse/: Cargo.toml
zparse/benches/: README.md  parser_benchmarks.rs
zparse/src/: converter.rs  enums.rs  error.rs  formatter.rs  lib.rs  main.rs  parser.rs  test_utils.rs  utils.rs
zparse/src/common/: converter.rs  parser_state.rs  value_compare.rs
zparse/src/converter/: json_to_toml.rs  toml_to_json.rs
zparse/src/formatter/: json.rs  toml.rs
zparse/src/parser/: config.rs  json.rs  lexer.rs  toml.rs  value.rs
zparse/src/parser/lexer/: string_parser.rs
zparse/src/test_utils/: comparison.rs  data.rs  fixtures.rs  helpers.rs
zparse/tests/: conversion_tests.rs  io_tests.rs  json_tests.rs  property_tests.rs  security_tests.rs  toml_tests.rs
zparse/tests/input/: file.json  file.toml  large.toml
