[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zParse Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/zparse"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
bumpalo = "3.16"
indexmap = "2.7"
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
worker = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
