[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "2.0.1"
edition = "2024"
authors = ["pa1nark"]
description = "A library and cli tool for parsing and converting JSON, TOML, YAML and XML."
license-file = "LICENSE"
repository = "https://github.com/pixincreate/zParse"
homepage = "https://github.com/pixincreate/zParse"
keywords = ["parser", "json", "toml", "yaml", "converter"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[workspace.dependencies]
zparse = { version = "2.0.1", path = "crates/zparse" }
thiserror = "2.0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.10.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
bumpalo = "3.19.1"
indexmap = "2.13.0"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
worker = "0.7.4"
time = { version = "0.3.47", features = ["parsing", "formatting", "macros"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
