[package]
name = "zparse-fuzz"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.zparse]
path = "../zparse"

# Fuzz target declarations
[[bin]]
name = "json_parser"
path = "fuzz_targets/json_parser.rs"
test = false
doc = false

[[bin]]
name = "toml_parser"
path = "fuzz_targets/toml_parser.rs"
test = false
doc = false

[[bin]]
name = "json_converter"
path = "fuzz_targets/json_converter.rs"
test = false
doc = false

[[bin]]
name = "toml_converter"
path = "fuzz_targets/toml_converter.rs"
test = false
doc = false
