[package]
name = "zparse-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Axum-based API for zparse on Cloudflare Workers"

[[bin]]
name = "zparse-api"
path = "src/main.rs"

[dependencies]
zparse = { path = "../zparse" }
serde = { workspace = true }
serde_json = "1.0"
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
