[package]
name = "zparse-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Axum-based API server for zparse"
readme = "../../README.md"
publish = false

[lib]
name = "zparse_api"
path = "src/lib.rs"

[[bin]]
name = "zparse-api"
path = "src/main.rs"

[dependencies]
zparse = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
