[package]
name = "zparse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI tool for zparse library"
readme = "../../README.md"

[[bin]]
name = "zparse"
path = "src/main.rs"

[dependencies]
zparse = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.57", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
