[package]
name = "zparse-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zparse.workspace = true
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde.workspace = true
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
